--- a/hero-1/hero.css
+++ b/hero-1/hero.css
@@ -60,19 +60,24 @@ section{
     height: 80%;
 }
 
-.expreience-area{
+.experience-area{
     background-image: url(images/../../images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
 }
 
-/* #full-stack{
-    border-left: 7px solid green;
-    background-image: linear-gradient(180deg, lightsalmon,tomato);
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightSalmon,tomato );
+    border-image-slice: 1;
+    /* background-color: white; */
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue,cyan );
     border-image-slice: 1;
 }
-#baby{
-    border-left: 7px solid green;
-    background-image: linear-gradient(180deg blue,cyan);
-    border-image-slice: 1;
-} */
+footer{
+    text-align: center;
+    font-size: 12px;
+}
